# prometheus-pve-sd

./: .cspell.json  .dictionary  .drone.jsonnet  .drone.yml  Containerfile.multiarch  Dockerfile.multiarch  Makefile  README.md  boo  pyproject.toml  renovate.json  setup.cfg
.chglog/: config.yml
.github/: settings.yml
.woodpecker/: build-container.yml  build-package.yml  docs.yaml  docs.yml  lint.yml  static.yaml  static.yml  test.yml
docker/: Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  manifest-quay.tmpl  manifest.tmpl
docs/: config.yaml
docs/content/: _index.md
docs/content/configuration/: _index.md  cli.md  defaults.md  env.md
docs/content/setup/: docker.md  pip.md  prometheus-operator.md
docs/content/usage/: _index.md  advanced.md  getting-started.md
docs/data/menu/: main.yml  more.yaml
prometheuspvesd/: __init__.py  cli.py  client.py  config.py  discovery.py  exception.py  logger.py  model.py  pve.json  utils.py
prometheuspvesd/test/: __init__.py
prometheuspvesd/test/data/: config.yml  config_error.yml
prometheuspvesd/test/fixtures/: __init__.py  fixtures.py
prometheuspvesd/test/unit/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_model.py  test_types.py
